# Proof-of-Personhood

./: README.md
canister/: Cargo.toml  README.md  call.sh  canister_ids.json  dfx.json  live_detect.did
canister/src/live_detect/: Cargo.toml  live_detect.did
canister/src/live_detect/src/: actor.rs  lib.rs  service.rs  state.rs  types.rs
frontend/: .gitignore  canister_config.ids.json  dfx.json  index.html  package-lock.json  package.json  tsconfig.json  typings.d.ts  vite.config.ts
frontend/scripts/: deploy_production.sh
frontend/src/: App.tsx  index.less  main.tsx
frontend/src/candid/: Pop.did.d.ts  Pop.did.idl.js  erc721.did.js  live_detect.d.ts  live_detect.idl.js  pop_nft.did.d.ts  pop_nft.idl.js
frontend/src/components/: Rate.tsx
frontend/src/service/: connection.ts
frontend/src/utils/: binary.ts  index.ts
frontend/src/utils/common/: constants.ts
