[package]
name = "live_detect"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "live_detect"
path = "src/lib.rs"

[dependencies]
candid = "0.7.10"
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
ic-ledger-types = "0.1.0"
ic-types = "0.3.0"
ic-kit = "0.4.3"
log = "0.4"
anyhow = "1.0.51"
thiserror = "1.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0"
serde_bytes = "0.11"
